# study-log

./: .gitignore  README.md
.github/workflows/: daily-log.yml
2026/05/week1/: README.md  meet_app.py
2026/05/week2/: homework1.md  social_network.py
2026/05/week2_ai/: README.md  app_frontend.py  community.db  controllers.py  routers.py  schemas.py
2026/05/week3/: 0527_Numpy_Linda.ipynb  README.md
2026/06/: 2026-06-18.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md
2026/06/week4/: README.md  index.html  index1.html  week4_Linda_1,2.ipynb  week4_Linda_3,4.ipynb
2026/06/week5/: week5_Linda_2.ipynb  week5_Linda_3.ipynb
logs/2026/06/: 2026-06-18.md  2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-25.md  (+5 more)
scripts/: calendar.json  update_log.py
weeks/week1/: meet_app_async.py
weeks/week2/: community.db  pyproject.toml  social_network_ai.py
weeks/week2_ai/: database.py  main.py  models.py
weeks/week3/: 0527_Visualization_Linda.ipynb  0528_Pandas_Linda.ipynb  0530_groupby_Linda.ipynb
weeks/week4/: week4_Linda_5,6,7.ipynb  week4_Linda_6_PyTorch.ipynb  week4_Linda_7_PyTorch.ipynb
weeks/week5/: week5_Linda_1.ipynb  week5_Linda_4.ipynb  week5_Linda_5.ipynb
weeks/week6/: RAG_Evaluation_딥다이브(과제1).ipynb
weeks/week7/: README.md
weeks/week7/follow_alex_v3/my_rag/: baseline.py  pyproject.toml  rag_chain.py
weeks/week8/follow_alex_v7/my_rag/: .env.example  baseline.py  emotion_map.py  graph.py  main.py  nodes.py  pyproject.toml  state.py
weeks/week8/follow_alex_v7/my_rag/chroma_db/: chroma.sqlite3
(+56 files in other folders)
