[project]
name = "my-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=0.3.0",
    "langsmith>=0.9.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langchain-openai>=1.3.3",
]
