[project]
name = "my-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langsmith>=0.9.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
